# xn_esp32_audio_prompt

./: README.md  partitions.csv  sdkconfig.defaults
components/xn_audio_prompt/include/: audio_prompt.h
components/xn_audio_prompt/src/: audio_prompt.c
components/xn_lottie_manager/include/: xn_lottie_manager.h
components/xn_lottie_manager/src/: xn_lottie_manager.c
main/: CMakeLists.txt  audio_config_app.c  main.c
main/audio_config_app/: audio_config_app.c
